--- a/index.html
+++ b/index.html
@@ -127,19 +127,15 @@
                 button:focus {
                     outline: 2px solid #FFD700; /* Add a focus outline for accessibility */
                 }
-        @media (max-width: 600px) {
+              @media (max-width: 600px) {
             #formContainer {
-                height: auto;
-                padding: 20px;
+                height: auto; /* Allows it to expand naturally */
+                padding: 50px 20px; /* Adds breathing space */
             }
 
             #form {
                 width: 90%;
-                margin: auto;
-            }
-
-            #popup {
-                width: 90%;
+                margin: auto; /* Ensures centering */
             }
         }
 
