--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
     <div id="popup">
         <h2><span id="userName"></span> عزيز، سال نو مبارك!</h2>
         <p style="font-size:20px;">
-            عزیزِ جان نوروزَت پیروز باد ، دوستدار شما ساریفر
+            عزیزِ جان نوروزَت پیروز باد ، دوستدار شما ساریفر🌻
             <br />
             نوروز <span class="numbers">۱۴۰۴</span>
         </p>
