--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 
     <!-- 🎉 POP-UP MESSAGE -->
     <div id="popup">
-        <h2><span id="userName"></span> عزيز، سال نو فرخنده!</h2>
+        <h2><span id="userName"></span> عزيز،<br /> سال نو فرخنده</h2>
         <p style="font-size:22px;">
             همه ساله بخت تو &nbsp;&nbsp;&nbsp;پیروز باد
             <br />
